feat: 增加短链相关类的注释，提升代码可读性